syntax = "proto3";
package submission;
option go_package="github.com/genshinsim/gcsim/backend/pkg/services/submission";

import "protos/model/result.proto";
import "protos/model/db.proto";

service SubmissionStore {
    rpc Submit (SubmitRequest) returns (SubmitResponse) {} 
    rpc DeletePending (DeletePendingRequest) returns (DeletePendingResponse) {}
    rpc CompletePending (CompletePendingRequest) returns (CompletePendingResponse) {}
    rpc GetWork (GetWorkRequest) returns (GetWorkResponse) {}
}

message SubmitRequest {
    string config = 1;
    string submitter = 2; //submitter discord id 
    string description = 3;
}

message SubmitResponse {
    string id = 1 [json_name="_id"];
}

message DeletePendingRequest {
    string id = 1 [json_name="_id"];
}

message DeletePendingResponse {
    string id = 1 [json_name="_id"];
}

message CompletePendingRequest {
    string id = 1 [json_name="_id"];
    model.SimulationResult result = 2; 
}

message CompletePendingResponse {
    string id = 1 [json_name="_id"];
}

message GetWorkRequest {
}

message GetWorkResponse {
    repeated model.ComputeWork data = 1;
}